b=33150 Fixed problem where reflow commands in different child lists were being coalesced