layout/html/base/src/nsAreaFrame.h
@@ -80,6 +80,8 @@ public:
                     const nsHTMLReflowState& aReflowState,
                     nsReflowStatus&          aStatus);
 
+  NS_IMETHOD ReflowDirtyChild(nsIPresShell* aPresShell, nsIFrame* aChild);
+
   /**
    * Get the "type" of the frame
    *
